fix(ui): fix sidebar nav icon spacing regression from Icon component migration
internal-repo-sha: e257584742d5fdf5c7e7aca8ecd92d9dafd37439

--- a/libraries/ui/src/components/interaction/SidebarNav/SidebarNav.css
+++ b/libraries/ui/src/components/interaction/SidebarNav/SidebarNav.css
@@ -171,7 +171,7 @@
       transition: all 200ms;
     }
 
-    span {
+    span:not(.span-icon) {
       margin-left: 45px;
     }
   }
